Fixed some issues found by Optimizr.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: Le journal de Christophe
 tagline: Geek, développeur Java
+description: "Technical blog of Christophe Labouisse, Expert Java developer"
 ---
 {% include JB/setup %}
 
