--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ description: "Technical blog of Christophe Labouisse, Expert Java developer"
 <!-- Pagination links -->
 <div class="pagination">
   {% if paginator.previous_page %}
-    <a href="/page{{ paginator.previous_page }}" class="previous">Previous</a>
+    <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
   {% else %}
     <span class="previous">Previous</span>
   {% endif %}
